# advent

./: .clangd  .gitignore
2022/day02/: day02.d
2022/day04/: day04.d
2022/day05/: day05.d
2022/day06/: day06.d
2022/day07/: day07.d
2022/day10/: day10.d
2022/day13/: day13.d
2022/day14/: day14.d
2022/day17/: day17.d
2022/day19/: day19.d  sample2.txt
2022/day21/: day21.cxx
2023/: CMakeLists.txt  darllen.hxx
2023/cookiecutter/: cookiecutter.json
2023/cookiecutter/{{ cookiecutter.project_slug }}/: CMakeLists.txt  solution.cxx
2023/day01/: build.ninja  solution.cxx
2023/day02/: solution.cxx
2023/day03/: build.ninja  input.txt  solution.cxx
2023/day04/: input.txt  solution.cxx
2023/day05/: build.ninja  solution.cxx
2023/day06/: solution.cxx
2023/day07/: build.ninja  solution.cxx
2023/day08/: build.ninja  input.txt  sample3.txt  solution.cxx
2023/day09/: solution.cxx
2023/day10/: CMakeLists.txt  build.ninja  genie.lua  precompiled.cxx  precompiled.hxx  solution.cxx
2023/day11/: precompiled.hxx  solution.cxx
2023/day12/: build.ninja  precompiled.hxx  solution.cxx
2023/day13/: CMakeLists.txt  precompiled.hxx  solution.cxx
2023/day14/: CMakeLists.txt  precompiled.hxx  solution.cxx
2023/day15/: CMakeLists.txt  precompiled.hxx  solution.cxx
2023/day16/: CMakeLists.txt  precompiled.hxx  solution.cxx
2023/day17/: CMakeLists.txt  precompiled.hxx  solution.cxx
2024/: CMakeLists.txt  CMakePresets.json  darllen.hxx
2024/day01/: CMakeLists.txt  precompiled.hxx  solution.cxx
2024/day02/: CMakeLists.txt  precompiled.hxx  solution.cxx
2024/day03/: CMakeLists.txt  precompiled.hxx  solution.cxx
2024/day04/: CMakeLists.txt  solution.cxx
2024/day05/: CMakeLists.txt  precompiled.hxx  readme.md  solution.cxx
2024/day06/: CMakeLists.txt  precompiled.hxx  solution.cxx
2024/day07/: CMakeLists.txt  precompiled.hxx  solution.cxx
2024/day08/: CMakeLists.txt  precompiled.hxx  solution.cxx
2024/day09/: CMakeLists.txt  precompiled.hxx  solution.cxx
2024/day10/: CMakeLists.txt  precompiled.hxx  solution.cxx
2024/day11/: CMakeLists.txt  precompiled.hxx  solution.cxx
2024/day12/: CMakeLists.txt  precompiled.hxx  solution.cxx
2024/day13/: precompiled.hxx  solution.cxx
2024/day14/: player.html  precompiled.hxx  solution.cxx
2024/day15/: Cargo.toml
2024/day15/src/: main.rs
2024/day16/src/: main.rs
2024/day17/: input.txt
2024/day17/src/: main.rs
2024/day18/src/: main.rs
2024/day19/: CMakeLists.txt  precompiled.hxx  solution.cxx
day01/: day01.cc  day01.d
day03/: day03.d
day06/: day06f.d
day08/: day08.d
day09/: day09.d
day11/: day11.d
day12/: day12.d
day15/: day15.d
day16/: day16.d
day17/: day17.d
day18/: day18.d
day19/: day19.d  input.txt  input2.txt  sample.txt
day20/: day20.cxx  day20.d
day21/: build.ninja  day21.cxx
day22/: build.ninja  day22.cxx
